@@ -508,6 +508,9 @@ Release 0.20.2 - Unreleased
 
     HDFS-723. Fix deadlock in DFSClient#DFSOutputStream. (hairong)
 
+    HDFS-793. Data node should receive the whole packet ack message before it
+    constructs and sends its own ack message for the packet. (hairong)
+
 Release 0.20.1 - 2009-09-01
 
   IMPROVEMENTS
